--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Project specific ignores
+
+backups/dump*.sql
+package-lock.json
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
