--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "api": "cd ../api && venv/bin/flask run --no-debugger"
   },
   "dependencies": {
+    "axios": "^1.12.2",
     "idb": "^8.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
