--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   nginx:
     image: nginx:latest
+    container_name: corcel_nginx
     ports:
       - "80:80"
     volumes:
@@ -14,8 +15,9 @@ services:
 
   frontend:
     build:
-      context: ./frontend
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: Dockerfile.frontend
+    container_name: corcel_frontend
     ports:
       - "8081:80"
     ulimits:
@@ -30,29 +32,42 @@ services:
 
   backend:
     build:
-      context: ./api
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: Dockerfile.api
+    container_name: corcel_backend
+    environment:
+      - POSTGRES_INITDB_ARGS=--encoding=UTF-8 --lc-collate=pt_BR.utf8 --lc-ctype=pt_BR.utf8
     ports:
       - "5000:5000"
-    environment:
-      - DATABASE_URL=postgresql://postgres:123456789@db:5432/corcel
     depends_on:
       - db
     networks:
       - app_network
 
   db:
-    image: postgres:13
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: 123456789
-      POSTGRES_DB: corcel
+    image: postgres:17
+    container_name: corcel_db
     ports:
       - "5433:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     networks:
       - app_network
+    env_file:
+      - ./.env
+
+  backups:
+    build:
+      context: .
+      dockerfile: Dockerfile.backups
+    container_name: corcel_backups
+    depends_on:
+      - db
+    volumes:
+      - ./backups:/dumps
+    networks:
+      - app_network
+    restart: unless-stopped
 
 networks:
   app_network:
