--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,8 +35,6 @@ services:
       context: .
       dockerfile: Dockerfile.api
     container_name: corcel_backend
-    environment:
-      - POSTGRES_INITDB_ARGS=--encoding=UTF-8 --lc-collate=pt_BR.utf8 --lc-ctype=pt_BR.utf8
     ports:
       - "5000:5000"
     depends_on:
@@ -64,9 +62,11 @@ services:
     depends_on:
       - db
     volumes:
-      - ./backups:/dumps
+      - ./backups/dumps:/dumps
     networks:
       - app_network
+    env_file:
+      - ./.env
     restart: unless-stopped
 
 networks:
