--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
+    "file-saver": "^2.0.5",
     "idb": "^8.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
