--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
     "react-select": "^5.9.0",
-    "zod": "^4.1.12"
+    "zod": "^4.1.12",
+    "jszip": "3.10.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
