--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,11 @@ Werkzeug==3.1.3
 flask-pydantic
 pydantic
 SQLAlchemy
+requests
+spacy-udpipe
+hunspell
+pyspellchecker
+levenshtein
+celery
+flask-cors
+redis
