Added celery and redis url example

--- a/.env.template
+++ b/.env.template
@@ -7,4 +7,8 @@ POSTGRES_PASSWORD=password
 POSTGRES_DB=db_name
 
 # flask startup route
-FLASK_APP=api/src/routes
+FLASK_APP=api/src/app
+
+CELERY_APP=backend/api/src/routes/tasks/tasks
+
+REDIS_URL=redis://localhost:6379/0
