--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 backups/dumps
 package-lock.json
 recovered_texts/
+dump.rdb
+temp_uploads/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
