Updated docker services

--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -1,5 +1,6 @@
 FROM python:3.12-slim
 
+# Installs system dependencies, including Redis
 RUN apt-get update && apt-get install -y \
     build-essential \
     libhunspell-dev \
@@ -8,22 +9,22 @@ RUN apt-get update && apt-get install -y \
     redis-server \
     && apt-get clean
 
-WORKDIR /backend
+WORKDIR /app/api
 
-COPY requirements.txt .
+# Copies requirements from the 'api' folder (assuming context is root)
+COPY api/requirements.txt .
 
 RUN pip install --upgrade pip
 RUN pip install --no-cache-dir -r requirements.txt
 
 RUN python -c "import spacy_udpipe; spacy_udpipe.download('pt')"
 
-COPY . .
+# Copies the rest of the backend code
+COPY api/ /app/api
 
-# Copia o script de inicialização e dá permissão de execução
-COPY backend/start.sh .
-RUN chmod +x start.sh
+RUN chmod +x /app/api/start.sh
 
 EXPOSE 5000
 
-# Executa o script que gerencia os dois processos
-CMD ["./backend/start.sh"]
+# Executes the script that manages Redis, Celery, and Flask
+CMD ["./start.sh"]
