--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,39 +1,24 @@
 services:
-  nginx:
-    image: nginx:latest
-    container_name: corcel_nginx
-    ports:
-      - "80:80"
-    volumes:
-      - ./frontend/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./frontend/dist:/usr/share/nginx/html  # Make sure you're pointing to the correct folder
-    depends_on:
-      - frontend
-      - backend
-    networks:
-      - app_network
-
   frontend:
     build:
       context: .
       dockerfile: Dockerfile.frontend
     container_name: corcel_frontend
     ports:
-      - "8081:80"
+      - "80:80"  
     ulimits:
       nofile:
-        soft: 65535  # Set soft limit for file descriptors
-        hard: 65535  # Set hard limit for file descriptors
+        soft: 65535
+        hard: 65535
     depends_on:
       - backend
     networks:
       - app_network
-      
 
   backend:
     build:
       context: .
-      dockerfile: Dockerfile.api
+      dockerfile: Dockerfile.backend
     container_name: corcel_backend
     ports:
       - "5000:5000"
@@ -52,7 +37,7 @@ services:
     networks:
       - app_network
     env_file:
-      - ./.env
+      - ./api/.env
 
   backups:
     build:
@@ -66,7 +51,7 @@ services:
     networks:
       - app_network
     env_file:
-      - ./.env
+      - ./api/.env
     restart: unless-stopped
 
 networks:
