--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,26 @@
 services:
+  nginx:
+    image: nginx:latest
+    container_name: corcel_nginx
+    ports:
+      - "80:80"
+    volumes:
+      - ./frontend/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./frontend/dist:/usr/share/nginx/html  # Make sure you're pointing to the correct folder
+    depends_on:
+      - frontend
+      - backend
+    networks:
+      - app_network
+
+
   frontend:
     build:
       context: .
       dockerfile: Dockerfile.frontend
     container_name: corcel_frontend
     ports:
-      - "80:80"  
+      - "8081:80"  
     ulimits:
       nofile:
         soft: 65535
