--- a/api/.env.template
+++ b/api/.env.template
@@ -11,3 +11,5 @@ FLASK_APP=api/src/app
 
 CELERY_BROKER_URL=redis://localhost:6379/0
 CELERY_RESULT_BACKEND=redis://localhost:6379/0
+
+SECRET_KEY=your_secret_key_here
