applied fix for website not updating for old users

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -15,6 +15,7 @@ http {
 		root /usr/share/nginx/html;  # Path to built React files
 		index index.html;
 		try_files $uri /index.html;  # React Router fallback
+        add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0";
 	    }
 
 	    # Proxy API requests to backend
@@ -35,6 +36,7 @@ http {
         location /assets/ {
             root /usr/share/nginx/html;  # Adjust if assets are in a different location
             try_files $uri =404;
+            add_header Cache-Control "public, max-age=31536000, immutable";
         }
 
         # Custom error pages
