--- a/api/.env.template
+++ b/api/.env.template
@@ -13,3 +13,4 @@ CELERY_BROKER_URL=redis://localhost:6379/0
 CELERY_RESULT_BACKEND=redis://localhost:6379/0
 
 SECRET_KEY=your_secret_key_here
+API_KEY=gemini_api_key_here
